<resources>
    <string name="app_name">Firebase</string>
    <string name="continue_button">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="name">Name</string>

    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="sign_up_login_hint">Already have an account? Sign In</string>
    <string name="login_sign_up_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="employees">Employees</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>

</resources>